force-app/main/default/objects/Lead/fields/Capture_Channel__c.field-meta.xml
<CustomField>
    <fullName>Capture_Channel__c</fullName>
    <description>Canal pelo qual o lead entrou: Web (formulario de site), API (servico REST de captura), Import (carga em lote), Event (feira ou evento) e Manual (digitado por um usuario). O padrao e Manual porque e o unico canal em que existe uma pessoa na tela; todos os demais sao gravados explicitamente pela integracao que cria o registro. Nao e obrigatorio: um required aqui quebraria a captura externa.</description>
    <inlineHelpText>Canal de origem da captura. Preenchido pela integracao; Manual quando digitado na tela.</inlineHelpText>
    <label>Capture Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>