force-app/main/default/objects/Lead/fields/Conversion_Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Blocked_Reason__c</fullName>
    <description>Motivo pelo qual a conversao deste lead em Account, Contact e Opportunity foi impedida. Preenchido pela validacao de conversao e limpo quando a pendencia e resolvida, para que o usuario veja o que corrigir em vez de um erro generico.</description>
    <inlineHelpText>Por que a conversao deste lead esta bloqueada. Em branco quando nao ha impedimento.</inlineHelpText>
    <label>Conversion Blocked Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>