force-app/main/default/objects/Lead/fields/Lead_Dedupe_Key__c.field-meta.xml
<CustomField>
    <fullName>Lead_Dedupe_Key__c</fullName>
    <description>Chave normalizada de deduplicacao, calculada em Apex: o e-mail em minusculas quando existe; sem e-mail, o nome da empresa normalizado somado ao pais. External Id e Unique, portanto a plataforma recusa o segundo lead com a mesma chave e o upsert da captura externa casa pelo registro existente em vez de duplicar. Case-insensitive de proposito, porque o mesmo e-mail chega com caixa diferente de cada canal.</description>
    <externalId>true</externalId>
    <inlineHelpText>Chave tecnica de deduplicacao calculada automaticamente. Nao editar manualmente.</inlineHelpText>
    <label>Lead Dedupe Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>