force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <description>Pontuacao de 0 a 100 calculada em Apex a partir das regras ativas de Lead_Scoring_Rule__mdt. Nao e preenchida pelo usuario: o valor e sempre resultado da execucao do motor de scoring, e mudar a regra no Custom Metadata muda a pontuacao sem deploy de Apex.</description>
    <inlineHelpText>Pontuacao 0-100 calculada automaticamente. Somente leitura para o usuario.</inlineHelpText>
    <label>Lead Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>