force-app/main/default/objects/Lead/fields/Lead_Score_Band__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Band__c</fullName>
    <description>Faixa derivada de Lead_Score__c (Hot, Warm, Cold), preenchida pelo mesmo Apex que calcula a pontuacao. Existe para relatorio e list view legiveis, porque a faixa e o que o time comercial usa no dia a dia; a pontuacao numerica e o detalhe. Sem valor padrao de proposito: lead ainda nao pontuado fica em branco, e branco significa "nao pontuado", nao "frio".</description>
    <inlineHelpText>Faixa derivada da pontuacao. Em branco significa lead ainda nao pontuado.</inlineHelpText>
    <label>Lead Score Band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>