force-app/main/default/objects/Lead/fields/Routed_At__c.field-meta.xml
<CustomField>
    <fullName>Routed_At__c</fullName>
    <description>Momento em que o lead foi atribuido a uma fila pelo motor de roteamento. Em branco significa lead ainda nao roteado, e e por esse campo que um reprocessamento identifica o que ficou para tras.</description>
    <inlineHelpText>Data e hora em que o lead foi roteado para uma fila.</inlineHelpText>
    <label>Routed At</label>
    <type>DateTime</type>
</CustomField>