force-app/main/default/objects/Lead/fields/Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Reason__c</fullName>
    <description>Explicacao legivel de qual regra de Lead_Routing_Rule__mdt decidiu a fila deste lead e por que. Existe para que uma atribuicao contestada seja auditavel sem ler log nem Apex.</description>
    <inlineHelpText>Qual regra de roteamento decidiu a fila deste lead.</inlineHelpText>
    <label>Routing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>