force-app/main/default/objects/Lead/fields/Scored_At__c.field-meta.xml
<CustomField>
    <fullName>Scored_At__c</fullName>
    <description>Momento em que o motor de scoring rodou pela ultima vez neste lead. Serve para distinguir pontuacao zero de lead nunca pontuado e para auditar reprocessamento em lote.</description>
    <inlineHelpText>Data e hora da ultima execucao do scoring neste lead.</inlineHelpText>
    <label>Scored At</label>
    <type>DateTime</type>
</CustomField>